[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl_resolution"
authors = [
    {name = "Shijun Cheng", email = "shijun.cheng@kaust.edu.sa"},
]
description = "This research develops a self-supervised framework for neural network-based resolution enhancement"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["self-supervised-learning", "seismic-processing"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
//        "numpy >= 1.22.0",
//        "torch>=1.10.1",
//        "pylops >= 2.0.0",
// 	      "setuptools >= 61.2.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
